# Final

./: README.md
pt/: test.ipynb
qr/: dataset.yaml  detect.cpp  qr.cpp  test.py  train.py
yuv/: CMakeLists.txt  test1_nv12.yuv  yuv.cpp
